# motion-data-2dto3d

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI開発フロー v7.8.3a 完全版.md  CLAUDE.md  CURSOR_TASK_GUI_E2E.md  Dockerfile  FLOW_LOG.md  README.md  REVIEW_SUPPLEMENT.md  docker-compose.yml  pyproject.toml  start-public.sh  手順.txt
.cursor/: BUGBOT.md
.cursor/commands/: code-reviewer.md
.cursor/rules/: proactive-subagents-and-skills.mdc
.kiro/specs/video-motion-extraction/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  specs.md  structure.md  tech.md
data/output/: batter_5182924.bvh  batter_swing.bvh  batter_swing_v3.bvh  kitty_tshirt.bvh  pitcher_5182923.bvh  sample_pitch_v3.bvh
data/output/archive/: 202603082151.blend  batter_swing_v2.bvh  sample_pitch.bvh
docs/: cloudflare-tunnel-setup.md  deploy-aws.md  interview-pipeline-summary.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BvhViewer.tsx  FileDownload.tsx  Layout.tsx  ParameterForm.tsx  PlaybackControls.tsx  ProcessingHistory.tsx  ProcessingLog.tsx  VideoUpload.tsx
frontend/src/hooks/: useBvhAnimation.ts
frontend/src/types/: index.ts
result/: batter_swing.bvh  batting_demo.bvh  output_scaled.bvh  output_v2.bvh  output_v2.json  real_mmpose.bvh  real_output.bvh  real_output_v2.bvh  vme_5bsfcic1.bvh  vme_pziq5fcg.bvh  vme_repwzm_z.bvh  vme_vs4l_871.bvh  walking_output.bvh
scripts/: download_weights.py
src/video_motion_extraction/: __init__.py  cli.py  config.py  converter_3d.py  data_processor.py  errors.py  gui.py  joint_mapping.py  logger.py  models.py  pose_estimator.py  quaternion_utils.py  validators.py  video_extractor.py  videopose3d_model.py  web.py
tests/: conftest.py  test_gui_e2e.py  test_video-motion-extraction.py
tests/.cursor/: BUGBOT.md
(+8 files in other folders)
