[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-motion-extraction"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "opencv-python>=4.5.0",
    "click>=8.0",
]

[project.optional-dependencies]
gui = ["gradio>=4.0"]
dev = [
    "pytest",
    "hypothesis",
    "playwright",
    "pytest-playwright",
]
gpu = [
    "torch>=1.10.0",
    "mmpose>=1.0.0",
    "mmdet>=3.0.0",
    "mmcv>=2.0.0",
    "mmengine>=0.7.0",
]

[project.scripts]
vme = "video_motion_extraction.cli:main"
vme-gui = "video_motion_extraction.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
